--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Joseph Davis <joseph@josephndavis.com>",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.15.2",
     "moment": "^2.15.1"
