--- a/package.json
+++ b/package.json
@@ -1,15 +1,31 @@
 {
   "name": "timestamp-microservice",
   "version": "1.0.0",
-  "description": "",
+  "description": "Returns a Unix and UTC timestamp for a given date",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "author": "Joseph Davis <joseph@josephndavis.com>",
+  "author": "Joseph Davis <joseph@josephndavis.com> (https://www.josephndavis.com)",
+  "homepage": "https://obscure-ravine-25083.herokuapp.com",
   "license": "MIT",
+  "keywords": [
+    "node",
+    "express",
+    "microservice",
+    "freecodecamp",
+    "timestamp"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MrWhiteNerdy/timestamp-microservice"
+  },
   "dependencies": {
-    "express": "^4.15.2",
-    "moment": "^2.15.1"
+    "cors": "^2.8.4",
+    "express": "^4.16.3"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.3"
   }
 }
